--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <title>Paths.scala.js demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script type="text/javascript" src="./src/main/resources/paths.js"></script>
+
     <script type="text/javascript" src="./target/scala-2.11/paths-scala-js-demo-jsdeps.js"></script>
     <script type="text/javascript" src="./target/scala-2.11/paths-scala-js-demo-opt.js"></script>
     <script type="text/javascript" src="./target/scala-2.11/paths-scala-js-demo-launcher.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./src/main/resources/main.css">
   </head>
   <body>
   </body>
