Added graph chart

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="js/paths-scala-js-demo-jsdeps.js"></script>
     <script type="text/javascript" src="js/paths-scala-js-demo-opt.js"></script>
     <script type="text/javascript" src="js/paths-scala-js-demo-launcher.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
